--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bimo",
   "version": "1.0.0",
-  "description": "Conteúdos para quem trabalha com Programação e Tecnologia.",
+  "description": "Implementação do https://www.tabnews.com.br para o https://curso.dev",
   "main": "index.js",
   "scripts": {
     "dev": "npm run services:up && npm run services:wait:database && npm run migrations:up && next dev",
